--- a/app/globals.css
+++ b/app/globals.css
@@ -52,15 +52,16 @@
   --shadow-color: hsl(0 0% 0%);
   --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0);
   --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0);
-  --shadow-sm: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 1px 2px -3px hsl(0 0% 0% / 0);
-  --shadow: 0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 1px 2px -3px hsl(0 0% 0% / 0);
-  --shadow-md: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 2px 4px -3px hsl(0 0% 0% / 0);
-  --shadow-lg: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 4px 6px -3px hsl(0 0% 0% / 0);
-  --shadow-xl: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 8px 10px -3px hsl(0 0% 0% / 0);
+  --shadow-sm:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 1px 2px -3px hsl(0 0% 0% / 0);
+  --shadow:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 1px 2px -3px hsl(0 0% 0% / 0);
+  --shadow-md:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 2px 4px -3px hsl(0 0% 0% / 0);
+  --shadow-lg:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 4px 6px -3px hsl(0 0% 0% / 0);
+  --shadow-xl:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 8px 10px -3px hsl(0 0% 0% / 0);
   --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 0);
 }
 
@@ -113,15 +114,16 @@
   --shadow-color: hsl(0 0% 0%);
   --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0);
   --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0);
-  --shadow-sm: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 1px 2px -3px hsl(0 0% 0% / 0);
-  --shadow: 0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 1px 2px -3px hsl(0 0% 0% / 0);
-  --shadow-md: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 2px 4px -3px hsl(0 0% 0% / 0);
-  --shadow-lg: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 4px 6px -3px hsl(0 0% 0% / 0);
-  --shadow-xl: 0px 4px 8px -2px hsl(0 0% 0% / 0),
-    0px 8px 10px -3px hsl(0 0% 0% / 0);
+  --shadow-sm:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 1px 2px -3px hsl(0 0% 0% / 0);
+  --shadow:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 1px 2px -3px hsl(0 0% 0% / 0);
+  --shadow-md:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 2px 4px -3px hsl(0 0% 0% / 0);
+  --shadow-lg:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 4px 6px -3px hsl(0 0% 0% / 0);
+  --shadow-xl:
+    0px 4px 8px -2px hsl(0 0% 0% / 0), 0px 8px 10px -3px hsl(0 0% 0% / 0);
   --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 0);
 }
 
@@ -226,5 +228,19 @@
 
   .bg-texture {
     @apply bg-[repeating-linear-gradient(-45deg,rgba(8,8,8,0.2)_0px,rgba(8,8,8,0.2)_2px,transparent_2px,transparent_4px)];
+  }
+
+  @keyframes soft-pulse {
+    0%,
+    100% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+  }
+
+  .animate-scale-pulse {
+    animation: soft-pulse 2s ease-in-out infinite;
   }
 }
